# Capstone

./: .gitattributes  .gitignore  README.md  app.py  app_nyc_dog_bites.py  app_original.py  choro_test.py  config.py  figures_utils.py  hello.py  nyc_digest.py  pyproject.toml  requirements.txt
Data/model_inputs/: model_input.csv  zips_with_clusters.csv
Data/processed/: arrests_outside_buffer_2023.csv  arrests_outside_buffer_by_zip.csv  arrests_outside_buffer_by_zip_2016.csv  facility_clustered.csv  features_by_year.csv  pca_loadings.csv  pca_with_clusters.csv
Data/raw/: zip_borough.csv
Unsupervised/: Unsupervised-tac-modified.ipynb  Unsupervised.ipynb  data_preprocess.py
data/: NYC_neighborhoods.json  PUMA_nyc_2020.csv  data_endpoints.py  process_puma_to_geojson.py
model/: supervised_model.pkl
notebooks/: Data.ipynb  Supervised.ipynb  Unsupervised.ipynb  arrests_outside_buffer.ipynb
preprocess/: data_preprocess.py  rental_pricing.py
src/: config.py  constants.py  data_endpoints.py  figures_utils.py  supervised_model.py  utils.py
src/process/: api_socrata.py  pca_facilities.py  process_arrests.py  process_features.py  rental_pricing.py
src/test/: viz_test.py
src/viz/: final_choro_test.py
viz/: final_choro_test.py
